Wrote API Logic and HTML-Instructions

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     
-    <link rel="stylesheet" href="./styles/main.css"/>
+    <link rel="stylesheet" href="./public/styles/main.css"/>
 
     <title>Timestamp Microservice</title>
   </head>
@@ -12,6 +12,15 @@
   <body>
     <main>
       <h1>Timestamp Microservice</h1>
+      <p>This Timestamp Microservice provides a conversion from unix to utc time and vice versa. You can use it for converting only, or if you need work with both formats in your application and save some time</p>
+      <p>Since this is a freeCodeCamp-Project of mine its limited in functionality to the tasks demanded by the corresponding <a href="https://www.freecodecamp.org/learn/back-end-development-and-apis/back-end-development-and-apis-projects/timestamp-microservice" title="freeCodeCamp tasks for the timestamp project" target="_blank">certification project</a>.</p>
+      <p>
+        Try my solution by using one of the following paths
+        <ul>
+          <li>".../api/&lt;unix-Time to convert&gt;" like <a href="https://Timestamp.dmnk28.repl.co/api/0" title="API Call unix-Time" target="_blank">.../api/0</a></li>
+        <li>".../api/&lt;utc-date  to convert&gt;" like <a href="https://Timestamp.dmnk28.repl.co/api/2022-03-26" title="API Call utc-Date">.../api/2022-03-26</a></li>
+          </ul>
+      </p>
     </main>
   </body>
 </html>
