--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,9 @@
         <li>".../api/&lt;utc-date  to convert&gt;" like <a href="https://Timestamp.dmnk28.repl.co/api/2022-03-26" title="API Call utc-Date">.../api/2022-03-26</a></li>
           </ul>
       </p>
+      <p>
+        Alternatively feel free to use any date you have in mind or use <a href="https://Timestamp.dmnk28.repl.co/api/" title="API Call now">.../api/</a> to get the an Timestamp of the current moment :) 
+      </p>
     </main>
   </body>
 </html>
