Removed logs in index.js and added targets to anchors in the html

--- a/public/index.html
+++ b/public/index.html
@@ -18,11 +18,11 @@
         Try my solution by using one of the following paths
         <ul>
           <li>".../api/&lt;unix-Time to convert&gt;" like <a href="https://Timestamp.dmnk28.repl.co/api/0" title="API Call unix-Time" target="_blank">.../api/0</a></li>
-        <li>".../api/&lt;utc-date  to convert&gt;" like <a href="https://Timestamp.dmnk28.repl.co/api/2022-03-26" title="API Call utc-Date">.../api/2022-03-26</a></li>
+        <li>".../api/&lt;utc-date  to convert&gt;" like <a href="https://Timestamp.dmnk28.repl.co/api/2022-03-26" title="API Call utc-Date" target="_blank">.../api/2022-03-26</a></li>
           </ul>
       </p>
       <p>
-        Alternatively feel free to use any date you have in mind or use <a href="https://Timestamp.dmnk28.repl.co/api/" title="API Call now">.../api/</a> to get the an Timestamp of the current moment :) 
+        Alternatively feel free to use any date you have in mind or use <a href="https://Timestamp.dmnk28.repl.co/api/" title="API Call now" target="_blank">.../api/</a> to get the an Timestamp of the current moment :) 
       </p>
     </main>
   </body>
